ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cf-clusterissuer
    external-dns.alpha.kubernetes.io/hostname: podinfo.leclerc.biz
    external-dns.alpha.kubernetes.io/target: reverse.leclerc.biz
    nginx.ingress.kubernetes.io/ssl-redirect: '"true"'
  name: podinfo
spec:
  ingressClassName: nginx
  rules:
  - host: podinfo.leclerc.biz
    http:
      paths:
      - backend:
          service:
            name: podinfo
            port:
              number: 9898
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - podinfo.leclerc.biz
    secretName: podinfo.leclerc.biz-tls
